install scala-maven-plugin and add mavenize task