@@ -2,38 +2,68 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>kafka</groupId>
-    <artifactId>kafka_2.9.2</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>core-kafka_2.9.2</artifactId>
+    <packaging>jar</packaging>
     <version>0.7.2</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <version>2.9.1</version>
+					      <configuration>
+					          <scalaVersion>2.9.2</scalaVersion>
+					          <recompileMode>modified-only</recompileMode>
+					          <args>
+					            <arg>-Xelide-below</arg>
+					            <arg>FINEST</arg>
+					            <arg>-deprecation</arg>
+					          </args>
+					          <jvmArgs>
+					            <arg>-XX:MaxPermSize=1024M</arg>
+					            <arg>-Xmx4G</arg>
+					          </jvmArgs>
+					        </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
-            <groupId>org.apache.rat</groupId>
-            <artifactId>apache-rat</artifactId>
-            <version>0.8</version>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.3.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>kafka</groupId>
-            <artifactId>core-kafka_2.9.2</artifactId>
-            <version>0.7.2</version>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>kafka</groupId>
-            <artifactId>contrib_2.9.2</artifactId>
-            <version>0.7.2</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.15</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>kafka</groupId>
-            <artifactId>perf_2.9.2</artifactId>
-            <version>0.7.2</version>
+            <groupId>net.sf.jopt-simple</groupId>
+            <artifactId>jopt-simple</artifactId>
+            <version>3.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>kafka</groupId>
-            <artifactId>java-examples_2.9.2</artifactId>
-            <version>0.7.2</version>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.0.4.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
